data/derived/comb/progs/unify/prog2683.ml.out
Characters 25-38:
  let _ = assoc (-1,"bob",[("ranjit",85);("william",23);("moose",44)]);;
                           ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string list
